@@ -1,4 +1,5 @@
 3.0.6
+ * Don't require HEAP_NEW_SIZE to be set when using G1 (CASSANDRA-11600)
  * Option to specify ProtocolVersion in cassandra-stress (CASSANDRA-11410)
  * ArithmeticException in avgFunctionForDecimal (CASSANDRA-11485)
  * LogAwareFileLister should only use OLD sstable files in current folder to determine disk consistency (CASSANDRA-11470)
